# vscode-cmake-tools

./: package-lock.json  package.json  tsconfig.json
src/: api.ts  async.ts  backend.ts  client.ts  cmake-tools.ts  cmake.ts  common.ts  environment.ts  extension.ts  model.ts  server-client.ts  status.ts  util.ts  wrapper.ts
test/: backend.test.ts  build.test.ts  extension.test.ts  fixture.ts  model.test.ts  smoke.test.ts  utility.test.ts
test/test_project/: CMakeLists.txt  another.cpp  main.cpp  timestamp.h.in
